--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>Section2BuildingaSpringBootWebApp</module>
+        <module>Section3PerformingDependencyInjectionwithSpring</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
