Add MVC Rest Service example

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>Section2BuildingaSpringBootWebApp</module>
         <module>Section3PerformingDependencyInjectionwithSpring</module>
         <module>Section5UsingProjectLombokwithSpringBoot</module>
+        <module>Section6SpringMVCRestServices</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
