--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Section3PerformingDependencyInjectionwithSpring</module>
         <module>Section5UsingProjectLombokwithSpringBoot</module>
         <module>Section6SpringMVCRestServices</module>
+        <module>Section7SpringMockMVCTestwithMockitoandJUnit</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
