JPA and integration testing in Spring

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>Section6SpringMVCRestServices</module>
         <module>Section7SpringMockMVCTestwithMockitoandJUnit</module>
         <module>Section8ExceptionHandlingwithSpringMVC</module>
+        <module>Section9SpringDataJPAwithSpringMVC</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
