Spring and MySQL basics

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>Section8ExceptionHandlingwithSpringMVC</module>
         <module>Section9SpringDataJPAwithSpringMVC</module>
         <module>Section10DataValidationWithSpring</module>
+        <module>Section11MySQLwithSpringBoot</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
