--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>Section9SpringDataJPAwithSpringMVC</module>
         <module>Section10DataValidationWithSpring</module>
         <module>Section11MySQLwithSpringBoot</module>
+        <module>Section12FlywayMigrationsWithSpringBoot</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
