Add Spring test contaiers example

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>Section10DataValidationWithSpring</module>
         <module>Section11MySQLwithSpringBoot</module>
         <module>Section12FlywayMigrationsWithSpringBoot</module>
+        <module>Section13UsingTestContainerswithSpringBoot</module>
+        <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
 </project>
