Add query parameters example

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>Section12FlywayMigrationsWithSpringBoot</module>
         <module>Section13UsingTestContainerswithSpringBoot</module>
         <module>Section14CSVFileUploads</module>
+        <module>Section15QueryParameterswithSpringMVC</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
