--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>Section14CSVFileUploads</module>
         <module>Section15QueryParameterswithSpringMVC</module>
         <module>Section16PagingandSortingwithSpringMVC</module>
+        <module>Section17JPADatabaseRelationshipMappings</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
