Add basic intro example

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>Section16PagingandSortingwithSpringMVC</module>
         <module>Section17JPADatabaseRelationshipMappings</module>
         <module>Section18DatabaseTransactionsandLockingandSpring</module>
+        <module>Section19IntroductionToSpringDataREST</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
