REST Mockito Spring Perspective

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>Section18DatabaseTransactionsandLockingandSpring</module>
         <module>Section19IntroductionToSpringDataREST</module>
         <module>Section20UsingSpringRESTTemplate</module>
+        <module>Section21TestingSpringRestTemplate</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
