Add notes on Spring Authorisation and Spring Authorisation Server example

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>Section20UsingSpringRESTTemplate</module>
         <module>Section21TestingSpringRestTemplate</module>
         <module>Section22SpringSecurityHTTPBasicAuth</module>
+        <module>Section23SpringAuthorizationServer</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
