--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>Section21TestingSpringRestTemplate</module>
         <module>Section22SpringSecurityHTTPBasicAuth</module>
         <module>Section23SpringAuthorizationServer</module>
+        <module>Section24SpringMVCOAuth2ResourceServer</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
