Spring Web Flux example

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>Section25SpringRestTemplatewithOAuth2</module>
         <module>Section26IntroductiontoReactiveProgrammingwithSpring</module>
         <module>Section27SpringDataR2DBC</module>
+        <module>Section28SpringWebFluxRestServices</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
