Sprign Web Flux testing

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>Section26IntroductiontoReactiveProgrammingwithSpring</module>
         <module>Section27SpringDataR2DBC</module>
         <module>Section28SpringWebFluxRestServices</module>
+        <module>Section29SpringWebFluxWebTestClient</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
