Add Spring functional web client

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>Section30ExceptionHandlingwithSpringWebFlux</module>
         <module>Section31SpringDataMongoDB</module>
         <module>Section32IntroductionandSpringWebFluxfnResource</module>
+        <module>Section33SpringWebClient</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
