Spring Webflux.fn resource server

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>Section32IntroductionandSpringWebFluxfnResource</module>
         <module>Section33SpringWebClient</module>
         <module>Section34SpringWebFluxResourceServer</module>
+        <module>Section35SpringWebFluxfnResourceServer</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
