Spring WebFlux OAUTH2

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>Section33SpringWebClient</module>
         <module>Section34SpringWebFluxResourceServer</module>
         <module>Section35SpringWebFluxfnResourceServer</module>
+        <module>Section36UsingOAuth20withSpringWebClient</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
