Spring API Gateway example

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>Section34SpringWebFluxResourceServer</module>
         <module>Section35SpringWebFluxfnResourceServer</module>
         <module>Section36UsingOAuth20withSpringWebClient</module>
+        <module>Section37SpringCloudGateway</module>
         <module>Section38SpringBootMavenPlugin</module>
         <module>Section53SpringBootMicroserviceswithApacheKafka</module>
     </modules>
